tests/cases/compiler-development/artifact/errors/diagnostic-trait-impl-missing-method.diagnostic
diagnostic error code=T0001 family=type message="impl of trait 'Show' for i64 is missing method 'show'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-impl-missing-method.ari" display="tests/cases/traits/errors/trait-impl-missing-method.ari" bytes=103
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-impl-missing-method.ari" line=5 column=6 end_line=5 end_column=10 byte_start=47 byte_end=51 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-impl-missing-method.ari:5:6\n   |\n 5 | impl Show[i64] for i64 {\n   |      ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/trait-impl-missing-method.ari" line=2 column=6 end_line=2 end_column=10 byte_start=21 byte_end=25 message="required method 'show' declared here"
  Snippet label=1 text="  --> tests/cases/traits/errors/trait-impl-missing-method.ari:2:6\n   |\n 2 |   fn show(self) -> i64\n   |      ^^^^"
  Note index=0 location=none message="trait impl methods must match the trait declaration exactly"
  Help index=0 location=none message="add method 'show' to this impl of trait 'Show'"
